csci515/src/practice/gpl.output
Terminals unused in grammar

    "zkey"
    "error"


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration ";"
    5            | object_declaration ";"
    6            | forward_declaration ";"

    7 variable_declaration: simple_type "identifier" optional_initializer
    8                     | simple_type "identifier" "[" expression "]"

    9 simple_type: "int"
   10            | "double"
   11            | "string"

   12 optional_initializer: "=" expression
   13                     | empty

   14 object_declaration: object_type "identifier" parameter_list_or_empty
   15                   | object_type "identifier" "[" expression "]"

   16 object_type: "triangle"
   17            | "pixmap"
   18            | "circle"
   19            | "rectangle"
   20            | "textbox"

   21 parameter_list_or_empty: "(" parameter_list ")"
   22                        | "(" empty ")"
   23                        | empty

   24 parameter_list: parameter "," parameter_list
   25               | parameter

   26 parameter: "identifier" "=" expression

   27 block_list: block_list block
   28           | empty

   29 block: initialization_block
   30      | termination_block
   31      | animation_block
   32      | on_block

   33 initialization_block: "initialization" statement_block

   34 termination_block: "termination" statement_block

   35 forward_declaration: "forward" "animation" "identifier" "(" animation_parameter ")"

   36 animation_parameter: object_type "identifier"
   37                    | object_type

   38 animation_block: animation_declaration statement_block

   39 animation_declaration: "animation" "identifier" "(" object_type "identifier" ")"

   40 on_block: "on" keystroke statement_block

   41 keystroke: "space"
   42          | "uparrow"
   43          | "downarrow"
   44          | "leftarrow"
   45          | "rightarrow"
   46          | "leftmouse_down"
   47          | "middlemouse_down"
   48          | "rightmouse_down"
   49          | "leftmouse_up"
   50          | "middlemouse_up"
   51          | "rightmouse_up"
   52          | "mouse_move"
   53          | "mouse_drag"
   54          | "akey"
   55          | "skey"
   56          | "dkey"
   57          | "fkey"
   58          | "hkey"
   59          | "jkey"
   60          | "kkey"
   61          | "lkey"
   62          | "wkey"
   63          | "f1"

   64 statement_or_block_of_statements: statement_block
   65                                 | statement

   66 statement_block: "{" statement_list "}"
   67                | "{" "}"

   68 statement_list: statement_list statement
   69               | statement

   70 statement: if_statement
   71          | for_statement
   72          | assign_statement ";"
   73          | print_statement ";"
   74          | exit_statement ";"
   75          | repeat_statement

   76 if_statement: "if" "(" expression ")" statement_or_block_of_statements
   77             | "if" "(" expression ")" statement_or_block_of_statements "else" statement_or_block_of_statements

   78 for_statement: "for" "(" assign_statement_or_empty ";" expression ";" assign_statement_or_empty ")" statement_or_block_of_statements

   79 repeat_statement: "repeat" statement_or_block_of_statements "until" "(" expression ")" ";"

   80 print_statement: "print" "(" expression ")"

   81 exit_statement: "exit" "(" expression ")"

   82 assign_statement_or_empty: assign_statement
   83                          | empty

   84 assign_statement: variable "=" expression
   85                 | variable "+=" expression
   86                 | variable "-=" expression
   87                 | variable "++"
   88                 | variable "--"

   89 variable: "identifier"
   90         | "identifier" "[" expression "]"
   91         | "identifier" "." "identifier"
   92         | "identifier" "[" expression "]" "." "identifier"

   93 expression: fifteen

   94 fifteen: fourteen
   95        | expression "||" fourteen

   96 fourteen: twelve
   97         | fourteen "&&" twelve

   98 twelve: ten
   99       | twelve "==" ten
  100       | twelve "!=" ten

  101 ten: eight
  102    | ten "<" eight
  103    | ten ">" eight
  104    | ten "<=" eight
  105    | ten ">=" eight

  106 eight: six
  107      | eight "+" six
  108      | eight "-" six

  109 six: four
  110    | six "*" four
  111    | six "/" four
  112    | six "%" four

  113 four: three
  114     | "!" four
  115     | "-" four

  116 three: proto_expression
  117      | three "touches" proto_expression
  118      | three "near" proto_expression

  119 proto_expression: primary_expression
  120                 | "sin" "(" expression ")"
  121                 | "cos" "(" expression ")"
  122                 | "tan" "(" expression ")"
  123                 | "asin" "(" expression ")"
  124                 | "acos" "(" expression ")"
  125                 | "atan" "(" expression ")"
  126                 | "sqrt" "(" expression ")"
  127                 | "abs" "(" expression ")"
  128                 | "floor" "(" expression ")"
  129                 | "random" "(" expression ")"

  130 primary_expression: "(" expression ")"
  131                   | variable
  132                   | "int constant"
  133                   | "true"
  134                   | "false"
  135                   | "double constant"
  136                   | "string constant"

  137 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "int" (258) 9
    "double" (259) 10
    "string" (260) 11
    "triangle" (261) 16
    "pixmap" (262) 17
    "circle" (263) 18
    "rectangle" (264) 19
    "textbox" (265) 20
    "forward" (266) 35
    "initialization" (267) 33
    "termination" (268) 34
    "on" (269) 40
    "animation" (270) 35 39
    "if" (271) 76 77
    "for" (272) 78
    "else" (273) 77
    "exit" <union_int> (274) 81
    "print" <union_int> (275) 80
    "true" (276) 133
    "false" (277) 134
    "space" (278) 41
    "leftarrow" (279) 44
    "rightarrow" (280) 45
    "uparrow" (281) 42
    "downarrow" (282) 43
    "leftmouse_down" (283) 46
    "middlemouse_down" (284) 47
    "rightmouse_down" (285) 48
    "leftmouse_up" (286) 49
    "middlemouse_up" (287) 50
    "rightmouse_up" (288) 51
    "mouse_move" (289) 52
    "mouse_drag" (290) 53
    "f1" (291) 63
    "akey" (292) 54
    "skey" (293) 55
    "dkey" (294) 56
    "fkey" (295) 57
    "hkey" (296) 58
    "jkey" (297) 59
    "kkey" (298) 60
    "lkey" (299) 61
    "wkey" (300) 62
    "zkey" (301)
    "(" (302) 21 22 35 39 76 77 78 79 80 81 120 121 122 123 124 125 126 127 128 129 130
    ")" (303) 21 22 35 39 76 77 78 79 80 81 120 121 122 123 124 125 126 127 128 129 130
    "{" (304) 66 67
    "}" (305) 66 67
    "[" (306) 8 15 90 92
    "]" (307) 8 15 90 92
    ";" (308) 4 5 6 72 73 74 78 79
    "," (309) 24
    "." (310) 91 92
    "=" (311) 12 26 84
    "+=" (312) 85
    "-=" (313) 86
    "++" (314) 87
    "--" (315) 88
    "sin" (316) 120
    "cos" (317) 121
    "tan" (318) 122
    "asin" (319) 123
    "acos" (320) 124
    "atan" (321) 125
    "sqrt" (322) 126
    "abs" (323) 127
    "floor" (324) 128
    "random" (325) 129
    "touches" (326) 117
    "near" (327) 118
    "*" (328) 110
    "/" (329) 111
    "+" (330) 107
    "-" (331) 108 115
    "%" (332) 112
    "<" (333) 102
    ">" (334) 103
    "<=" (335) 104
    ">=" (336) 105
    "==" (337) 99
    "!=" (338) 100
    "!" (339) 114
    "&&" (340) 97
    "||" (341) 95
    "repeat" (342) 79
    "until" (343) 79
    "int constant" <union_int> (344) 132
    "double constant" <union_double> (345) 135
    "string constant" <union_string> (346) 136
    "identifier" <union_string> (347) 7 8 14 15 26 35 36 39 89 90 91 92
    "error" (348)
    T_IF_NO_ELSE (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    program (96)
        on left: 1
        on right: 0
    declaration_list (97)
        on left: 2 3
        on right: 1 2
    declaration (98)
        on left: 4 5 6
        on right: 2
    variable_declaration (99)
        on left: 7 8
        on right: 4
    simple_type <union_gpl_type> (100)
        on left: 9 10 11
        on right: 7 8
    optional_initializer <union_expression_ptr> (101)
        on left: 12 13
        on right: 7
    object_declaration (102)
        on left: 14 15
        on right: 5
    object_type <union_gpl_type> (103)
        on left: 16 17 18 19 20
        on right: 14 15 36 37 39
    parameter_list_or_empty <union_parameter_ptr> (104)
        on left: 21 22 23
        on right: 14
    parameter_list <union_parameter_ptr> (105)
        on left: 24 25
        on right: 21 24
    parameter <union_parameter_ptr> (106)
        on left: 26
        on right: 24 25
    block_list (107)
        on left: 27 28
        on right: 1 27
    block (108)
        on left: 29 30 31 32
        on right: 27
    initialization_block (109)
        on left: 33
        on right: 29
    termination_block (110)
        on left: 34
        on right: 30
    forward_declaration (111)
        on left: 35
        on right: 6
    animation_parameter (112)
        on left: 36 37
        on right: 35
    animation_block (113)
        on left: 38
        on right: 31
    animation_declaration (114)
        on left: 39
        on right: 38
    on_block <union_statement_ptr> (115)
        on left: 40
        on right: 32
    keystroke <union_keystroke> (116)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 40
    statement_or_block_of_statements <union_statement_ptr> (117)
        on left: 64 65
        on right: 76 77 78 79
    statement_block <union_statement_ptr> (118)
        on left: 66 67
        on right: 33 34 38 40 64
    statement_list <union_statement_ptr> (119)
        on left: 68 69
        on right: 66 68
    statement <union_statement_ptr> (120)
        on left: 70 71 72 73 74 75
        on right: 65 68 69
    if_statement <union_statement_ptr> (121)
        on left: 76 77
        on right: 70
    for_statement <union_statement_ptr> (122)
        on left: 78
        on right: 71
    repeat_statement <union_statement_ptr> (123)
        on left: 79
        on right: 75
    print_statement <union_statement_ptr> (124)
        on left: 80
        on right: 73
    exit_statement <union_statement_ptr> (125)
        on left: 81
        on right: 74
    assign_statement_or_empty <union_statement_ptr> (126)
        on left: 82 83
        on right: 78
    assign_statement <union_statement_ptr> (127)
        on left: 84 85 86 87 88
        on right: 72 82
    variable <union_variable_ptr> (128)
        on left: 89 90 91 92
        on right: 84 85 86 87 88 131
    expression <union_expression_ptr> (129)
        on left: 93
        on right: 8 12 15 26 76 77 78 79 80 81 84 85 86 90 92 95 120 121 122 123 124 125 126 127 128 129 130
    fifteen <union_expression_ptr> (130)
        on left: 94 95
        on right: 93
    fourteen <union_expression_ptr> (131)
        on left: 96 97
        on right: 94 95 97
    twelve <union_expression_ptr> (132)
        on left: 98 99 100
        on right: 96 97 99 100
    ten <union_expression_ptr> (133)
        on left: 101 102 103 104 105
        on right: 98 99 100 102 103 104 105
    eight <union_expression_ptr> (134)
        on left: 106 107 108
        on right: 101 102 103 104 105 107 108
    six <union_expression_ptr> (135)
        on left: 109 110 111 112
        on right: 106 107 108 110 111 112
    four <union_expression_ptr> (136)
        on left: 113 114 115
        on right: 109 110 111 112 114 115
    three <union_expression_ptr> (137)
        on left: 116 117 118
        on right: 113 117 118
    proto_expression <union_expression_ptr> (138)
        on left: 119 120 121 122 123 124 125 126 127 128 129
        on right: 116 117 118
    primary_expression <union_expression_ptr> (139)
        on left: 130 131 132 133 134 135 136
        on right: 119
    empty (140)
        on left: 137
        on right: 3 13 22 23 28 83


State 0

    0 $accept: • program $end

    $default  reduce using rule 137 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    1 program: declaration_list • block_list
    2 declaration_list: declaration_list • declaration

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "string"     shift, and go to state 7
    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12
    "forward"    shift, and go to state 13

    $default  reduce using rule 137 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    block_list            go to state 19
    forward_declaration   go to state 20
    empty                 go to state 21


State 3

    3 declaration_list: empty •

    $default  reduce using rule 3 (declaration_list)


State 4

    0 $accept: program $end •

    $default  accept


State 5

    9 simple_type: "int" •

    $default  reduce using rule 9 (simple_type)


State 6

   10 simple_type: "double" •

    $default  reduce using rule 10 (simple_type)


State 7

   11 simple_type: "string" •

    $default  reduce using rule 11 (simple_type)


State 8

   16 object_type: "triangle" •

    $default  reduce using rule 16 (object_type)


State 9

   17 object_type: "pixmap" •

    $default  reduce using rule 17 (object_type)


State 10

   18 object_type: "circle" •

    $default  reduce using rule 18 (object_type)


State 11

   19 object_type: "rectangle" •

    $default  reduce using rule 19 (object_type)


State 12

   20 object_type: "textbox" •

    $default  reduce using rule 20 (object_type)


State 13

   35 forward_declaration: "forward" • "animation" "identifier" "(" animation_parameter ")"

    "animation"  shift, and go to state 22


State 14

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 15

    4 declaration: variable_declaration • ";"

    ";"  shift, and go to state 23


State 16

    7 variable_declaration: simple_type • "identifier" optional_initializer
    8                     | simple_type • "identifier" "[" expression "]"

    "identifier"  shift, and go to state 24


State 17

    5 declaration: object_declaration • ";"

    ";"  shift, and go to state 25


State 18

   14 object_declaration: object_type • "identifier" parameter_list_or_empty
   15                   | object_type • "identifier" "[" expression "]"

    "identifier"  shift, and go to state 26


State 19

    1 program: declaration_list block_list •
   27 block_list: block_list • block

    "initialization"  shift, and go to state 27
    "termination"     shift, and go to state 28
    "on"              shift, and go to state 29
    "animation"       shift, and go to state 30

    $default  reduce using rule 1 (program)

    block                  go to state 31
    initialization_block   go to state 32
    termination_block      go to state 33
    animation_block        go to state 34
    animation_declaration  go to state 35
    on_block               go to state 36


State 20

    6 declaration: forward_declaration • ";"

    ";"  shift, and go to state 37


State 21

   28 block_list: empty •

    $default  reduce using rule 28 (block_list)


State 22

   35 forward_declaration: "forward" "animation" • "identifier" "(" animation_parameter ")"

    "identifier"  shift, and go to state 38


State 23

    4 declaration: variable_declaration ";" •

    $default  reduce using rule 4 (declaration)


State 24

    7 variable_declaration: simple_type "identifier" • optional_initializer
    8                     | simple_type "identifier" • "[" expression "]"

    "["  shift, and go to state 39
    "="  shift, and go to state 40

    $default  reduce using rule 137 (empty)

    optional_initializer  go to state 41
    empty                 go to state 42


State 25

    5 declaration: object_declaration ";" •

    $default  reduce using rule 5 (declaration)


State 26

   14 object_declaration: object_type "identifier" • parameter_list_or_empty
   15                   | object_type "identifier" • "[" expression "]"

    "("  shift, and go to state 43
    "["  shift, and go to state 44

    $default  reduce using rule 137 (empty)

    parameter_list_or_empty  go to state 45
    empty                    go to state 46


State 27

   33 initialization_block: "initialization" • statement_block

    "{"  shift, and go to state 47

    statement_block  go to state 48


State 28

   34 termination_block: "termination" • statement_block

    "{"  shift, and go to state 47

    statement_block  go to state 49


State 29

   40 on_block: "on" • keystroke statement_block

    "space"             shift, and go to state 50
    "leftarrow"         shift, and go to state 51
    "rightarrow"        shift, and go to state 52
    "uparrow"           shift, and go to state 53
    "downarrow"         shift, and go to state 54
    "leftmouse_down"    shift, and go to state 55
    "middlemouse_down"  shift, and go to state 56
    "rightmouse_down"   shift, and go to state 57
    "leftmouse_up"      shift, and go to state 58
    "middlemouse_up"    shift, and go to state 59
    "rightmouse_up"     shift, and go to state 60
    "mouse_move"        shift, and go to state 61
    "mouse_drag"        shift, and go to state 62
    "f1"                shift, and go to state 63
    "akey"              shift, and go to state 64
    "skey"              shift, and go to state 65
    "dkey"              shift, and go to state 66
    "fkey"              shift, and go to state 67
    "hkey"              shift, and go to state 68
    "jkey"              shift, and go to state 69
    "kkey"              shift, and go to state 70
    "lkey"              shift, and go to state 71
    "wkey"              shift, and go to state 72

    keystroke  go to state 73


State 30

   39 animation_declaration: "animation" • "identifier" "(" object_type "identifier" ")"

    "identifier"  shift, and go to state 74


State 31

   27 block_list: block_list block •

    $default  reduce using rule 27 (block_list)


State 32

   29 block: initialization_block •

    $default  reduce using rule 29 (block)


State 33

   30 block: termination_block •

    $default  reduce using rule 30 (block)


State 34

   31 block: animation_block •

    $default  reduce using rule 31 (block)


State 35

   38 animation_block: animation_declaration • statement_block

    "{"  shift, and go to state 47

    statement_block  go to state 75


State 36

   32 block: on_block •

    $default  reduce using rule 32 (block)


State 37

    6 declaration: forward_declaration ";" •

    $default  reduce using rule 6 (declaration)


State 38

   35 forward_declaration: "forward" "animation" "identifier" • "(" animation_parameter ")"

    "("  shift, and go to state 76


State 39

    8 variable_declaration: simple_type "identifier" "[" • expression "]"

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    expression          go to state 97
    fifteen             go to state 98
    fourteen            go to state 99
    twelve              go to state 100
    ten                 go to state 101
    eight               go to state 102
    six                 go to state 103
    four                go to state 104
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 40

   12 optional_initializer: "=" • expression

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    expression          go to state 108
    fifteen             go to state 98
    fourteen            go to state 99
    twelve              go to state 100
    ten                 go to state 101
    eight               go to state 102
    six                 go to state 103
    four                go to state 104
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 41

    7 variable_declaration: simple_type "identifier" optional_initializer •

    $default  reduce using rule 7 (variable_declaration)


State 42

   13 optional_initializer: empty •

    $default  reduce using rule 13 (optional_initializer)


State 43

   21 parameter_list_or_empty: "(" • parameter_list ")"
   22                        | "(" • empty ")"

    "identifier"  shift, and go to state 109

    $default  reduce using rule 137 (empty)

    parameter_list  go to state 110
    parameter       go to state 111
    empty           go to state 112


State 44

   15 object_declaration: object_type "identifier" "[" • expression "]"

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    expression          go to state 113
    fifteen             go to state 98
    fourteen            go to state 99
    twelve              go to state 100
    ten                 go to state 101
    eight               go to state 102
    six                 go to state 103
    four                go to state 104
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 45

   14 object_declaration: object_type "identifier" parameter_list_or_empty •

    $default  reduce using rule 14 (object_declaration)


State 46

   23 parameter_list_or_empty: empty •

    $default  reduce using rule 23 (parameter_list_or_empty)


State 47

   66 statement_block: "{" • statement_list "}"
   67                | "{" • "}"

    "if"          shift, and go to state 114
    "for"         shift, and go to state 115
    "exit"        shift, and go to state 116
    "print"       shift, and go to state 117
    "}"           shift, and go to state 118
    "repeat"      shift, and go to state 119
    "identifier"  shift, and go to state 95

    statement_list    go to state 120
    statement         go to state 121
    if_statement      go to state 122
    for_statement     go to state 123
    repeat_statement  go to state 124
    print_statement   go to state 125
    exit_statement    go to state 126
    assign_statement  go to state 127
    variable          go to state 128


State 48

   33 initialization_block: "initialization" statement_block •

    $default  reduce using rule 33 (initialization_block)


State 49

   34 termination_block: "termination" statement_block •

    $default  reduce using rule 34 (termination_block)


State 50

   41 keystroke: "space" •

    $default  reduce using rule 41 (keystroke)


State 51

   44 keystroke: "leftarrow" •

    $default  reduce using rule 44 (keystroke)


State 52

   45 keystroke: "rightarrow" •

    $default  reduce using rule 45 (keystroke)


State 53

   42 keystroke: "uparrow" •

    $default  reduce using rule 42 (keystroke)


State 54

   43 keystroke: "downarrow" •

    $default  reduce using rule 43 (keystroke)


State 55

   46 keystroke: "leftmouse_down" •

    $default  reduce using rule 46 (keystroke)


State 56

   47 keystroke: "middlemouse_down" •

    $default  reduce using rule 47 (keystroke)


State 57

   48 keystroke: "rightmouse_down" •

    $default  reduce using rule 48 (keystroke)


State 58

   49 keystroke: "leftmouse_up" •

    $default  reduce using rule 49 (keystroke)


State 59

   50 keystroke: "middlemouse_up" •

    $default  reduce using rule 50 (keystroke)


State 60

   51 keystroke: "rightmouse_up" •

    $default  reduce using rule 51 (keystroke)


State 61

   52 keystroke: "mouse_move" •

    $default  reduce using rule 52 (keystroke)


State 62

   53 keystroke: "mouse_drag" •

    $default  reduce using rule 53 (keystroke)


State 63

   63 keystroke: "f1" •

    $default  reduce using rule 63 (keystroke)


State 64

   54 keystroke: "akey" •

    $default  reduce using rule 54 (keystroke)


State 65

   55 keystroke: "skey" •

    $default  reduce using rule 55 (keystroke)


State 66

   56 keystroke: "dkey" •

    $default  reduce using rule 56 (keystroke)


State 67

   57 keystroke: "fkey" •

    $default  reduce using rule 57 (keystroke)


State 68

   58 keystroke: "hkey" •

    $default  reduce using rule 58 (keystroke)


State 69

   59 keystroke: "jkey" •

    $default  reduce using rule 59 (keystroke)


State 70

   60 keystroke: "kkey" •

    $default  reduce using rule 60 (keystroke)


State 71

   61 keystroke: "lkey" •

    $default  reduce using rule 61 (keystroke)


State 72

   62 keystroke: "wkey" •

    $default  reduce using rule 62 (keystroke)


State 73

   40 on_block: "on" keystroke • statement_block

    "{"  shift, and go to state 47

    statement_block  go to state 129


State 74

   39 animation_declaration: "animation" "identifier" • "(" object_type "identifier" ")"

    "("  shift, and go to state 130


State 75

   38 animation_block: animation_declaration statement_block •

    $default  reduce using rule 38 (animation_block)


State 76

   35 forward_declaration: "forward" "animation" "identifier" "(" • animation_parameter ")"

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type          go to state 131
    animation_parameter  go to state 132


State 77

  133 primary_expression: "true" •

    $default  reduce using rule 133 (primary_expression)


State 78

  134 primary_expression: "false" •

    $default  reduce using rule 134 (primary_expression)


State 79

  130 primary_expression: "(" • expression ")"

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    expression          go to state 133
    fifteen             go to state 98
    fourteen            go to state 99
    twelve              go to state 100
    ten                 go to state 101
    eight               go to state 102
    six                 go to state 103
    four                go to state 104
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 80

  120 proto_expression: "sin" • "(" expression ")"

    "("  shift, and go to state 134


State 81

  121 proto_expression: "cos" • "(" expression ")"

    "("  shift, and go to state 135


State 82

  122 proto_expression: "tan" • "(" expression ")"

    "("  shift, and go to state 136


State 83

  123 proto_expression: "asin" • "(" expression ")"

    "("  shift, and go to state 137


State 84

  124 proto_expression: "acos" • "(" expression ")"

    "("  shift, and go to state 138


State 85

  125 proto_expression: "atan" • "(" expression ")"

    "("  shift, and go to state 139


State 86

  126 proto_expression: "sqrt" • "(" expression ")"

    "("  shift, and go to state 140


State 87

  127 proto_expression: "abs" • "(" expression ")"

    "("  shift, and go to state 141


State 88

  128 proto_expression: "floor" • "(" expression ")"

    "("  shift, and go to state 142


State 89

  129 proto_expression: "random" • "(" expression ")"

    "("  shift, and go to state 143


State 90

  115 four: "-" • four

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    four                go to state 144
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 91

  114 four: "!" • four

    "true"             shift, and go to state 77
    "false"            shift, and go to state 78
    "("                shift, and go to state 79
    "sin"              shift, and go to state 80
    "cos"              shift, and go to state 81
    "tan"              shift, and go to state 82
    "asin"             shift, and go to state 83
    "acos"             shift, and go to state 84
    "atan"             shift, and go to state 85
    "sqrt"             shift, and go to state 86
    "abs"              shift, and go to state 87
    "floor"            shift, and go to state 88
    "random"           shift, and go to state 89
    "-"                shift, and go to state 90
    "!"                shift, and go to state 91
    "int constant"     shift, and go to state 92
    "double constant"  shift, and go to state 93
    "string constant"  shift, and go to state 94
    "identifier"       shift, and go to state 95

    variable            go to state 96
    four                go to state 145
    three               go to state 105
    proto_expression    go to state 106
    primary_expression  go to state 107


State 92

  132 primary_expression: "int constant" •

    $default  reduce using rule 132 (primary_expression)


State 93

  135 primary_expression: "double constant" •

    $default  reduce using rule 135 (primary_expression)


State 94

  136 primary_expression: "string constant" •

    $default  reduce using rule 136 (primary_expression)


State 95

   89 variable: "identifier" •
   90         | "identifier" • "[" expression "]"
   91         | "identifier" • "." "identifier"
   92         | "identifier" • "[" expression "]" "." "identifier"

    "["  shift, and go to state 146
    "."  shift, and go to state 147

    $default  reduce using rule 89 (variable)


State 96

  131 primary_expression: variable •

    $default  reduce using rule 131 (primary_expression)


State 97

    8 variable_declaration: simple_type "identifier" "[" expression • "]"
   95 fifteen: expression • "||" fourteen

    "]"   shift, and go to state 148
    "||"  shift, and go to state 149


State 98

   93 expression: fifteen •

    $default  reduce using rule 93 (expression)


State 99

   94 fifteen: fourteen •
   97 fourteen: fourteen • "&&" twelve

    "&&"  shift, and go to state 150

    $default  reduce using rule 94 (fifteen)


State 100

   96 fourteen: twelve •
   99 twelve: twelve • "==" ten
  100       | twelve • "!=" ten

    "=="  shift, and go to state 151
    "!="  shift, and go to state 152

    $default  reduce using rule 96 (fourteen)


State 101

   98 twelve: ten •
  102 ten: ten • "<" eight
  103    | ten • ">" eight
  104    | ten • "<=" eight
  105    | ten • ">=" eight

    "<"   shift, and go to state 153
    ">"   shift, and go to state 154
    "<="  shift, and go to state 155
    ">="  shift, and go to state 156

    $default  reduce using rule 98 (twelve)


State 102

  101 ten: eight •
  107 eight: eight • "+" six
  108      | eight • "-" six

    "+"  shift, and go to state 157
    "-"  shift, and go to state 158

    $default  reduce using rule 101 (ten)


State 103

  106 eight: six •
  110 six: six • "*" four
  111    | six • "/" four
  112    | six • "%" four

    "*"  shift, and go to state 159
    "/"  shift, and go to state 160
    "%"  shift, and go to state 161

    $default  reduce using rule 106 (eight)


State 104

  109 six: four •

    $default  reduce using rule 109 (six)


State 105

  113 four: three •
  117 three: three • "touches" proto_expression
  118      | three • "near" proto_expression

    "touches"  shift, and go to state 162
    "near"     shift, and go to state 163

    $default  reduce using rule 113 (four)


State 106

  116 three: proto_expression •

    $default  reduce using rule 116 (three)


State 107

  119 proto_expression: primary_expression •

    $default  reduce using rule 119 (proto_expression)


State 108

   12 optional_initializer: "=" expression •
   95 fifteen: expression • "||" fourteen

    "||"  shift, and go to state 149

    $default  reduce using rule 12 (optional_initializer)


State 109

   26 parameter: "identifier" • "=" expression

    "="  shift, and go to state 164


State 110

   21 parameter_list_or_empty: "(" parameter_list • ")"

    ")"  shift, and go to state 165


State 111

   24 parameter_list: parameter • "," parameter_list
   25               | parameter •

    ","  shift, and go to state 166

    $default  reduce using rule 25 (parameter_list)


State 112

   22 parameter_list_or_empty: "(" empty • ")"

    ")"  shift, and go to state 167


State 113

   15 object_declaration: object_type "identifier" "[" expression • "]"
   95 fifteen: expression • "||" fourteen

    "]"   shift, and go to state 168
    "||"  shift, and go to state 149


State 114

   76 if_statement: "if" • "(" expression ")" statement_or_block_of_statements
   77             | "if" • "(" expression ")" statement_or_block_of_statements "else" statement_or_block_of_statements

    "("  shift, and go to state 169


State 115

   78 for_statement: "for" • "(" assign_statement_or_empty ";" expression ";" assign_statement_or_empty ")" statement_or_block_of_statements

    "("  shift, and go to state 170


State 116

   81 exit_statement: "exit" • "(" expression ")"

    "("  shift, and go to state 171


State 117

   80 print_statement: "print" • "(" expression ")"

    "("  shift, and go to state 172


State 118

   67 statement_block: "{" "}" •

    $default  reduce using rule 67 (statement_block)


State 119

   79 repeat_statement: "repeat" • statement_or_block_of_statements "until" "(" expression ")" ";"

    "if"          shift, and go to state 114
    "for"         shift, and go to state 115
    "exit"        shift, and go to state 116
    "print"       shift, and go to state 117
    "{"           shift, and go to state 47
    "repeat"      shift, and go to state 119
    "identifier"  shift, and go to state 95

    statement_or_block_of_statements  go to state 173
    statement_block                   go to state 174
    statement                         go to state 175
    if_statement                      go to state 122
    for_statement                     go to state 123
    repeat_statement                  go to state 124
    print_statement                   go to state 125
    exit_statement                    go to state 126
    assign_statement                  go to state 127
    variable                          go to state 128


State 120

   66 statement_block: "{" statement_list • "}"
   68 statement_list: statement_list • statement
